[project]
name = "link_sharing_app"
version = "1.0.0"
description = ""
dependencies = [
    "flask",
    "pytest",
    "coverage",
    "python-dotenv",
    "waitress",
    "pyjwt",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["link_sharing_app"]
